data/derived/fa15/progs/unify/prog3740.ml.out
Characters 507-508:
  | GoldTimes   m4	    -> (eval(m4,x,y))*.(1+.sqrt(5))/.2.0;;
                                           ^
Error: This expression has type int but an expression was expected of type
         float
